objects/Support_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Additional_Values__c</fullName>
        <inlineHelpText>Currently only supports Restricted_E2C_Domains metadata</inlineHelpText>
        <label>Additional Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValueNum__c</fullName>
        <label>Value (Num)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValueNumber__c</fullName>
        <label>Value Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Support Setting</label>
    <pluralLabel>Support Settings</pluralLabel>
</CustomObject>